# cami-project

./: .dockerignore  .gitignore  .gitmodules  DEPLOYING.md  Dockerfile-frontend  Dockerfile-linkwatch  Dockerfile-medical-compliance  Dockerfile-opentele  Dockerfile-store  Dockerfile-store-management  INTEGRATIONS.md  LG_WATCH_SETUP.md  LOGGING.md  README.md  TESTING.md  cami-event-api-definition.yml  cami-measurements-api-definition.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-rancher.yml  docker-compose-smart-scheduling.yml  docker-compose.yml  docker-compose.yml.orig  rancher-compose.yml
DSS/: DSS.sln  Dockerfile  README.md
DSS/DSS.Delegate/: Channel.cs  Config.cs  DSS.Delegate.csproj  Event.cs  IRouterHandler.cs  Registry.cs  Router.cs  default.config.json  delegate.config.json
DSS/DSS.ExpertSystem/: DSS.ExpertSystem.csproj  Program.cs  packages.config
DSS/DSS.FuzzyInference.Playground/: DSS.FuzzyInference.Playground.csproj  Program.cs
DSS/DSS.Main/: Program.cs  (+5 more)
ansible/: daemon.yml  dev.yml  frontend.yml  google_calendar.yml  insertion.yml  linkwatch.yml  medical-compliance.yml  medical_compliance.yml  medical_compliance_provision.yml  medical_compliance_run.yml  opentele.yml  rabbitmq_server.yml  store-management.yml  store.yml
application/: .gitignore  INSTALL.md  README.md  SETUP.md  env.example.js  index.android.js  index.ios.js  package.json
daemon/: daemon.py  send.py
data-collector-unit/ble-gateway/: .gitignore  CMakeLists.txt  README.md  prepare_deployment.sh  prepare_project.sh  setup_deployment.sh  setup_project.sh
data-collector-unit/ble-gateway/include/: AdCamiActionsServer.h  AdCamiBluetooth5.h  AdCamiBluetoothDefinitions.h  AdCamiBluetoothDevice.h  AdCamiCommon.h  AdCamiConfiguration.h  AdCamiEvent.h  AdCamiEventBloodPressureMeasurement.h  AdCamiEventFactory.h  AdCamiEventWeightMeasurement.h  AdCamiEventsStorage.h  AdCamiHttpClient.h  AdCamiHttpCommon.h  AdCamiHttpData.h  AdCamiHttpHeaders.h  AdCamiHttpServer.h  AdCamiJsonConverter.h  AdCamiLogging.h  AdCamiMeasurement.h  AdCamiMonitor.h  AdCamiReadMeasurementsStrategy.h  AdCamiUrl.h  AdCamiUtilities.h  IAdCamiBluetooth.h  IAdCamiBluetoothDiscoveryStrategy.h  IAdCamiEventMeasurement.h  IAdCamiHardwareFactory.h
data-collector-unit/ble-gateway/include/dbus/: dbus_helper_5.h  dbus_helper_defs.h
data-collector-unit/ble-gateway/scripts/: adcamid  adcamid.service  postinst
data-collector-unit/ble-gateway/scripts/sql/: eventsdb_create.sql  eventsdb_dummy_data.sql
data-collector-unit/ble-gateway/scripts/xml/: Agent1.xml
data-collector-unit/ble-gateway/src/: AdCamiBleDaemon.cpp  AdCamiBluetooth5.cpp  AdCamiBluetoothDefinitions.cpp  AdCamiBluetoothDevice.cpp  AdCamiConfiguration.cpp  AdCamiEvent.cpp  AdCamiEventsStorage.cpp  AdCamiHttpClient.cpp  AdCamiHttpCommon.cpp  AdCamiHttpData.cpp  AdCamiHttpHeaders.cpp  AdCamiHttpServer.cpp  AdCamiJsonConverter.cpp  AdCamiMonitor.cpp  AdCamiReadMeasurementsStrategy.cpp  AdCamiUrl.cpp  AdCamiUtilities.cpp
data-collector-unit/ble-gateway/src/dbus/: dbus_helper_5.cpp
data-collector-unit/ble-gateway/test/: TestAdCamiHttpServer.py  TestAdCamiInteractive.py  TestAdCamiProximity.cpp  TestAsyncDiscovery.cpp  TestAsyncNotifications.cpp  TestConnectDevice.cpp  TestDeviceInformation.cpp  TestDeviceProperties.cpp  TestDiscoverReadDevice.cpp  TestDiscovery.cpp  TestPairDevice.cpp  TestSyncNotifications.cpp  test_get_events.json
data-collector-unit/ble-gateway/test/support/: HttpClient.py  HttpServer.py
data-collector-unit/ble-gateway/test/unit/: TestAdCamiConfiguration.cpp  TestAdCamiEvent.cpp  TestAdCamiHttpClient.cpp  TestAdCamiMeasurements.cpp
docker/: Dockerfile-dss  Dockerfile-frontend  Dockerfile-google-calendar  Dockerfile-insertion  Dockerfile-linkwatch  Dockerfile-medical-compliance  Dockerfile-mysql  Dockerfile-opentele  Dockerfile-smart-scheduling  Dockerfile-store
documentation/: ANDROID-APP-SUBMODULE-MGMT.md  CONTRIBUTING.md  DEPLOYING.md  INTEGRATIONS.md  TESTING.md
frontend/: README.md  requirements.txt  run_celery.py  run_worker.py
frontend_tasks/: README.md  tasks.py
google_calendar/: README.md  activities.py  cami-calendar-quickstart-dk.json  cami-calendar-quickstart-dk_2.json  cami-calendar-quickstart-dk_3.json  cami-calendar-quickstart-pl.json  cami-calendar-quickstart-ro.json  cami-calendar-quickstart.json  client_secret.json  client_secret_dk.json  client_secret_dk_2.json  client_secret_dk_3.json  client_secret_pl.json  client_secret_ro.json  google_calendar_backend.py  json_from_dict_conversion_methods.py  requirements.txt  run_celery.py  run_celery_beat.py  scheduler_utils.py  settings.py  store_utils.py  tasks.py
google_fit/: GoogleFitHeartRate.py  README.md  add_test_hr_value.py  add_test_steps_value.py  get_data.py  get_hr_data.py  get_refresh_token.py  get_steps_data.py  requirements.txt  write_data.py
insertion/: README.md  cami-insertion-api.yml  manage.py  requirements.txt
linkwatch/: constants.py  custom_logging.py  endpoints.py  requirements.txt  settings.py  tasks.py
medical-compliance/: requirements.txt
medical_compliance/: last_timestamp  manage.py  requirements.txt  run_celery.py  run_celery_beat.py
mysql/: README.md  create_cami.sql
opentele/: constants.py  custom_logging.py  endpoints.py  run_celery.py  settings.py  tasks.py
proof_of_concept/: README.md  get_data.py  get_refresh_token.py
scenarios/: frontend_tasks  requirements.txt
store/: .gitignore  README.md  bootstrap_user_info.py  cami-calendar-quickstart.json  cami-store-api.yml  cami_activities.py  create_cami.sql  create_frontend.sql  field-trials-cleanup.py  field-trials-save.py  gcal_quickstart.py  migrate.sh  populate_frontend.sql  requirements.txt  run_celery.py  run_celery_beat.py  test_django_superuser.sh  test_sync.py
ui/: README.md  mock_api_server  notification.high.json  notification.low.json  notification.medium.json  push_high_notification  push_low_notification  push_medium_notification  push_notification
vagrant/: Vagrantfile
website/: .gitignore  Gruntfile.js  README.md  deploy.sh  package.json
(+404 files in other folders)
